added webkit screen
need to add url

--- a/forrealthistime/forrealthistime/Base.lproj/Main.storyboard
+++ b/forrealthistime/forrealthistime/Base.lproj/Main.storyboard
@@ -70,6 +70,15 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" allowsBackForwardNavigationGestures="YES" customUserAgent="" findInteractionEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="flj-4B-hMC">
+                                <rect key="frame" x="0.0" y="170" width="393" height="682"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Y19-EB-NHY"/>
                         <color key="backgroundColor" systemColor="separatorColor"/>
@@ -78,7 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yAv-Is-q1z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1647" y="0.0"/>
+            <point key="canvasLocation" x="1646.5648854961833" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fYk-Gk-sh1">
