--- a/forrealthistime/forrealthistime/Base.lproj/Main.storyboard
+++ b/forrealthistime/forrealthistime/Base.lproj/Main.storyboard
@@ -123,6 +123,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Send Call"/>
+                                <connections>
+                                    <action selector="dwdwd:" destination="YMV-G9-bMh" eventType="touchUpInside" id="vMd-OR-uSG"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIJ-df-KCl">
                                 <rect key="frame" x="182" y="695" width="50" height="35"/>
@@ -130,7 +133,9 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" image="questionmark.circle" catalog="system" title=""/>
                                 <connections>
-                                    <action selector="questionMarkPressed:" destination="YMV-G9-bMh" eventType="touchUpInside" id="hE1-ZH-Z4D"/>
+                                    <action selector="bruh:" destination="YMV-G9-bMh" eventType="touchUpInside" id="RHu-qM-OpI"/>
+                                    <action selector="questionMarkPressed:" destination="YMV-G9-bMh" eventType="touchUpInside" id="XMe-hh-IvQ"/>
+                                    <action selector="questionPressed:" destination="YMV-G9-bMh" eventType="touchUpInside" id="dDB-iw-FYg"/>
                                 </connections>
                             </button>
                         </subviews>
